Fix whitespace for MS Word AI alt text
Basically word auto inserts alt text like this:

```
A turtle in a tank.

AI-generated content may be incorrect.
```

Because there are 2 newlines in there, it breaks our markdown
rendering, so we replace \n\n in image alt texts with \n.

Also add styling so that inline images have rounded corners.

--- a/bloom_nofos/bloom_nofos/static/shared.css
+++ b/bloom_nofos/bloom_nofos/static/shared.css
@@ -190,6 +190,12 @@
   background-color: var(--color--yellow);
 }
 
+.martor-preview img,
+.nofo-edit-table--subsection--body img,
+.section--content img {
+  border-radius: 10px;
+}
+
 /* List CSS */
 
 ol ol:not([type]):not(.usa-list--unstyled) {
